--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,39 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+html {
+   margin: 10rem;
+   font-family: 'Inter', sans-serif;
+   font-size: 1.5em;
+   background-color: #394032;
+   color: #FFFFFF;
 }
 
-#greeting-container {
-  margin-top: 20px;
+body {
+    align-items: center; 
+    justify-content: center; 
+    flex-direction: column; 
+}
+
+img {
+  border-radius: 50%;
+}
+
+.fact-container {
+    margin-left: 100px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
 }
