--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,19 +1,45 @@
-html {
-   margin: 10rem;
-   font-family: 'Inter', sans-serif;
-   font-size: 1.5em;
-   background-color: #394032;
-   color: #FFFFFF;
+html, body {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.2em;
+    background-color: #394032;
+    color: #FFFFFF;
 }
 
-body {
-    align-items: center; 
-    justify-content: center; 
-    flex-direction: column; 
+h1 {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+h2 {
+    margin-top:1rem;
+    margin-bottom: 1rem;
+}
+
+a {
+    color:aliceblue;
+}
+
+a:link, a:hover, a:active {
+    text-decoration: none;
 }
 
 img {
-  border-radius: 50%;
+    max-width: 170px !important;
+    min-width: 100px;
+    height: auto;
+    display: inline-block;
+    border:4px solid #FFFFFF;
+}
+
+section {
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding: 4.5rem 4rem;
 }
 
 .fact-container {
@@ -21,19 +47,14 @@ img {
 }
 
 .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 .fa:hover {
-  opacity: 0.7;
-}
-
-/* Twitter */
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
+    opacity: 0.7;
 }
