--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -15,6 +15,7 @@ h1 {
 h2 {
     margin-top:1rem;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 a {
@@ -26,11 +27,12 @@ a:link, a:hover, a:active {
 }
 
 img {
-    max-width: 170px !important;
+    max-width: 250px !important;
     min-width: 100px;
     height: auto;
     display: inline-block;
     border:4px solid #FFFFFF;
+    align-self: center;
 }
 
 section {
