--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,60 +1,78 @@
 html, body {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Inter', sans-serif;
-    font-size: 1.2em;
-    background-color: #394032;
+    margin: 0;
+    padding: 0;
+    background-color: #898CAE;
+    font-family: 'Muli', sans-serif;
     color: #FFFFFF;
+    font-size: 18px;
 }
 
 h1 {
-    margin-top: 1rem;
+    margin: 1rem;
     text-align: center;
 }
 
 h2 {
-    margin-top:1rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
-    text-align: center;
 }
 
 a {
-    color:aliceblue;
+    color: #898CAE;
 }
 
-a:link, a:hover, a:active {
+a:link, a:visited, a:hover {
     text-decoration: none;
 }
 
+a #link {
+    color: #000000;
+}
+
 img {
-    max-width: 250px !important;
+    max-width: 170px !important;
     min-width: 100px;
     height: auto;
     display: inline-block;
-    border:4px solid #FFFFFF;
-    align-self: center;
+    border: 4px solid #FFFFFF;
 }
 
-section {
+img.rounded-circle.profile {
+    max-width: 250px !important;
+}
+
+.jumbotron {
+    color: #000000;
+    padding: 4.5rem 4rem;
+    margin: 0;
+}
+
+#container {
     flex-wrap: wrap;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
-    padding: 4.5rem 4rem;
+    align-items: center;
 }
 
-.fact-container {
-    margin-left: 100px;
+#socials {
+    margin: 2rem 2rem 0 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 2rem;
 }
 
 .fa {
     padding: 20px;
+    margin: 0.5rem;
     font-size: 30px;
-    width: 50px;
+    width: 70px;
     text-align: center;
     text-decoration: none;
-    color: #FFFFFF;
+    border-radius: 50%;
+    align-items: center;
+    color: #000000;
 }
 
 .fa:hover {
