add second row of projects and style to fit purple theme

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -80,6 +80,7 @@ img.rounded-circle.profile {
 .card {
     background-color: rgba(255, 255, 255, 0.5); 
     color: #000000;
+    margin-bottom: 1rem;
 }
 
 .btn-primary {
