--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -36,7 +36,7 @@ a #link {
 
 .jumbotron {
   color: #000000;
-  padding: 4.5rem 4rem;
+  padding: 3rem 2rem;
   margin: 0;
 }
 
@@ -57,10 +57,8 @@ a #link {
 }
 
 .fa {
-  padding: 20px;
-  margin: 0.5rem;
-  font-size: 2rem !important;
-  width: 70px;
+  padding: 1rem;
+  font-size: 1.5rem !important;
   text-align: center;
   text-decoration: none;
   color: #000000;
