--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -2,8 +2,9 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: #898cae;
-  font-family: 'Muli', sans-serif;
-  color: #FFFFFF;
+  font-family: 'Muli', 
+  sans-serif;
+  color: #fff;
   font-size: 18px;
 }
 
@@ -31,11 +32,11 @@ a:link, a:visited, a:hover {
 }
 
 a #link {
-  color: #000000;
+  color: #000;
 }
 
 .jumbotron {
-  color: #000000;
+  color: #000;
   padding: 3rem 2rem;
   margin: 0;
 }
@@ -57,7 +58,7 @@ a #link {
   font-size: 1.5rem !important;
   text-align: center;
   text-decoration: none;
-  color: #000000;
+  color: #000;
 }
 
 .fa:hover {
@@ -66,14 +67,14 @@ a #link {
 
 .card {
   background-color: rgba(255, 255, 255, 0.5); 
-  color: #000000;
+  color: #000;
   margin-bottom: 1rem;
 }
 
 .btn-primary {
-  color: #ffffff;
+  color: #fff;
   background-color: #898cae;
-  border-color: #ffffff;  
+  border-color: #fff;
 }
 
 .icons { 
@@ -92,7 +93,7 @@ a #link {
   content: '';
   position: absolute;
   width: 6px;
-  background-color: white;
+  background-color: #fff;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -113,7 +114,7 @@ a #link {
   width: 25px;
   height: 25px;
   right: -15px;
-  background-color: #ffffff;
+  background-color: #fff;
   border: 4px solid #c0b6b6;
   top: 15px;
   border-radius: 50%;
@@ -191,9 +192,9 @@ a #link {
   .left::after, .right::after {
     left: 20px;
   }
-  
+
   /* Make all right containers behave like the left ones */
-    .right {
+  .right {
     left: 0%;
   }
 }
@@ -213,7 +214,7 @@ a #link {
 .progress-container {
   width: 100%;
   height: 8px;
-  background: #cccccc;
+  background: #ccc;
 }
 
 .progress-bar {
